<resources>
    <string name="app_name">ForexViewer</string>
    <string name="api_key">Api key</string>
    <string name="confirm_api_key">Save</string>
    <string name="dismiss_api_key">Cancel</string>
    <string name="forex_pairs">Forex pairs</string>
    <string name="navigate_back">Navigate back</string>
    <string name="search">Search</string>
    <string name="clear_search_text">Clear search text</string>
    <string name="favorite">Favorite</string>
    <string name="update_api_key">Update api key</string>
    <string name="navigate_to_forex_pairs">Navigate to forex pairs screen</string>
    <string name="failure_message">Something went wrong</string>
</resources>